--- a/i3/config
+++ b/i3/config
@@ -41,7 +41,7 @@ bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOU
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec urxvt 
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -196,3 +196,10 @@ default_border none
 # Change the backlight brightness via hotkeys
 bindsym XF86KbdBrightnessUp exec brightnessctl set +20%
 bindsym XF86KbdBrightnessDown exec brightnessctl set -20%
+
+# Adding a compositor
+# exec picom 
+# exec compton --vsync opengl-swc --backend glx
+
+# Fixing .Xresources not being read
+exec xrdb ~/.Xresources
