tweak p-shell config

--- a/powerline-shell/config.json
+++ b/powerline-shell/config.json
@@ -3,12 +3,12 @@
     "virtual_env",
     "ssh",
     "cwd",
-    "git",
+	 "git",
+	 "git_stash",
     "hg",
     "jobs",
     "root"
   ],
-  "mode": "flat",
   "cwd": {
 	  "max_depth":1 
   }
