pop broke the system so I had to make some changes till everything catches up

--- a/i3/config
+++ b/i3/config
@@ -179,8 +179,8 @@ bar {
 }
 
 # i3-gaps configuration settings
-gaps inner 13
-smart_gaps on
+# gaps inner 13
+# smart_gaps on
 
 # Uses feh to make a background using filepath
 #exec --no-startup-id feh --bg-scale '/home/pullmore/Pictures/Wallpaper/Synth-City.png'
