--- a/i3status/config
+++ b/i3status/config
@@ -1,16 +1,21 @@
 general {
 	colors = true
 	interval = 15
+	color_good = "#a3be8c"
+	color_degraded = "#ebcb8b"
+	color_bad = "#bf616a"
+	separator = "||"
 }
 
 #order += "ipv6"
 #order += "wireless _first_"
-order += "ethernet _first_"
+#order += "ethernet _first_"
 order += "battery all"
 order += "disk /"
 #order += "load"
-order += "memory"
+#order += "memory"
 order += "tztime local"
+order += "volume master"
 
 wireless _first_ {
 	format_up = "W: (%quality at %essid) %ip"
@@ -35,11 +40,19 @@ load {
 }
 
 memory {
-	format = "%used | %available"
+	format = " %used | %available "
 	threshold_degraded = "1G"
-	format_degraded = "MEMORY < %available"
+	format_degraded = " MEMORY < %available "
 }
 
 tztime local {
-	format = "%m-%d-%Y %I:%M:%S"
+	format = "%m-%d-%Y    %I:%M:%S"
+}
+
+volume master {
+        format = "♪: %volume"
+        format_muted = "♪: muted (%volume)"
+        device = "default"
+        mixer = "Master"
+        mixer_idx = 0
 }
